--- a/index.html
+++ b/index.html
@@ -31,22 +31,7 @@
             </span>
         </div>
         <!-- Images Container -->
-        <div class="images-container">
-            <div class="card">
-                <a href="" title="View Full Image" target="_blank">
-                    <img src="https://apod.nasa.gov/apod/image/2007/msv1500crop.jpg" alt="Nasa Picture of the Day" class="card-img-top">
-                </a>
-                <div class="card-body">
-                    <h5 class="card-title">Title of Image</h5>
-                    <p class="clickable">Add To Favorites</p>
-                    <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum nostrum reiciendis qui recusandae quam obcaecati ipsum porro tempora asperiores. Quisquam nulla in iste, deserunt reiciendis impedit optio porro ullam saepe! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolores illo eum ratione, expedita, natus cumque mollitia et veritatis quidem ipsum, rem sed tenetur doloribus amet. Vel et optio quisquam.
-                    </p>
-                    <small class="text-muted">
-                        <strong>12-12-2021</strong>
-                        <span>Copyright Info</span>
-                    </small>
-                </div>
-            </div>
+        <div class="images-container"></div>
         </div>
     </div>
     <!-- Save Confirmation -->
