--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             <span class="background"></span>
             <!-- Results Nav -->
             <span class="navigation-items" id="resultsNav">
-                <h3 class="clickable">Favorites</h3>
+                <h3 class="clickable" onclick="updateDOM('favorites')">Favorites</h3>
                 <h3>&nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;</h3>
-                <h3 class="clickable">Load More</h3>
+                <h3 class="clickable" onclick="getNasaPictures()">Load More</h3>
                 <!-- Favorites Nav -->
-                <span class="navigation-items hidden" id="favoritesNav">
-                    <h3 class="clickable">Load More NASA Images</h3>
+                <span class="navigation-items" id="favoritesNav">
+                    <h3 class="clickable" onclick="getNasaPictures()">Load More NASA Images</h3>
                 </span>
             </span>
         </div>
@@ -35,7 +35,7 @@
         </div>
     </div>
     <!-- Save Confirmation -->
-    <div class="save-confirmed">
+    <div class="save-confirmed hidden">
         <h1>ADDED!</h1>
     </div>
     <!-- Script -->
