fixed favorites page bug - favoritesNav span had the wrong parent

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NASA API Pictures</title>
+    <title>NASA Picture of the Day</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="https://s2.googleusercontent.com/s2/favicons?domain=www.nasa.gov">
     <!-- Rocket Favicon -->
@@ -24,10 +24,10 @@
                 <h3 class="clickable" onclick="updateDOM('favorites')">Favorites</h3>
                 <h3>&nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;</h3>
                 <h3 class="clickable" onclick="getNasaPictures()">Load More</h3>
-                <!-- Favorites Nav -->
-                <span class="navigation-items" id="favoritesNav">
-                    <h3 class="clickable" onclick="getNasaPictures()">Load More NASA Images</h3>
-                </span>
+            </span>
+            <!-- Favorites Nav -->
+            <span class="navigation-items hidden" id="favoritesNav">
+                <h3 class="clickable" onclick="getNasaPictures()">Load More NASA Images</h3>
             </span>
         </div>
         <!-- Images Container -->
